Add html compression to the site

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,15 @@ theme: theme
 sass:
   style: compressed
 
+compress_html:
+  clippings: []
+  comments: ["<!--", "-->"]
+  endings: []
+  ignore:
+    envs: []
+  blanklines: false
+  profile: false
+  startings: []
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
