fix menu and add info

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -6,5 +6,7 @@ items:
   - title: Info
     url: info.html
 
-  - title: Locatie
-    url: locatie.html
+  - title: Algemene voorwaarden
+    url: voorwaarden.html
+#  - title: Locatie
+#    url: locatie.html
