--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -9,5 +9,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: jekyll-deploy-gh-pages
-      uses: BryanSchuetz/jekyll-deploy-gh-pages@v2.0
+    - name: Jekyll Action
+      uses: helaili/jekyll-action@1.0
