--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,15 @@
-name: Build and deploy site
+name: Jekyll Deploy
 
 on: [push]
 
 jobs:
-  build:
-
+  build_and_deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup Ruby for use with actions
-      uses: actions/setup-ruby@v1.0.0
-    - name: Setup Jekyll
-      run: gem install jekyll bundler
-    - name: Build site
-      run: bundler install && jekyll build
-    - name: Debug
-      run: cat ./_site/index.html
-        
+      - uses: actions/checkout@v1
+      - name: Build & Deploy to GitHub Pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
+          GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
+        uses: BryanSchuetz/jekyll-deploy-gh-pages@master
