--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -9,7 +9,7 @@ items:
   - title: Contact
     url: contact.html
 
-  - title: Algemene voorwaarden
+  - title: Voorwaarden
     url: voorwaarden.html
 #  - title: Locatie
 #    url: locatie.html
